--- a/login/input.html
+++ b/login/input.html
@@ -104,6 +104,17 @@
         </div>
 
     </div>
+    <script>
+  async function startCamera() {
+    const video = document.getElementById('video');
+    try {
+      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+      video.srcObject = stream;
+    } catch (e) {
+      alert("Không truy cập được camera");
+    }
+  }
+</script>
 
 
 </body>
