--- a/lecturer/dashboardGV.html
+++ b/lecturer/dashboardGV.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hệ thống điểm danh</title>
+    <title>Thông tin giảng viên</title>
     <style>
         body {
             margin: 0;
@@ -141,8 +141,12 @@
 
             <!-- Nút chức năng -->
             <div class="btn-group">
-                <button class="btn-attendance">Bắt đầu điểm danh</button>
-                <button class="btn-logout">Đăng xuất</button>
+                <a href="D:\pjFaceAI\student\attendance.html" class="btn-group">
+                    <button class="btn-attendance">Bắt đầu điểm danh</button>
+                </a>
+                <a href="D:\pjFaceAI\login\login.html" class="btn-group">
+                    <button class="btn-logout">Đăng xuất</button>
+                </a>
             </div>
         </div>
     </div>
