--- a/student/attendance.html
+++ b/student/attendance.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>AI Attendance</title>
+  <title>Điểm danh</title>
   <link rel="stylesheet" href="attendance.css">
 </head>
 <body>
