--- a/lecturer/classesGV.html
+++ b/lecturer/classesGV.html
@@ -1,31 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div style="text-align: center;">
-        <img src="../Logo đơn vị_Khoa CNTT.png" alt="logo khoa"
-        style="width: 40%; height: auto;">
-    </div>
-    <div style="background-color: rgb(229, 246, 255);">
-        <div style="text-align: center;">
-            <h1>HỆ THỐNG ĐIỂM DANH</h1> 
-            <h2>DANH SÁCH LỚP HỌC</h2>
-        </div>
-        <ul>
-            <li>Tên môn học: </li>
-            <li>Học kì - năm: </li>
-            <li>Số sinh viên: </li>
-            <li>
-                <input type="button" value="Xem chi tiết">
-            </li>
-        </ul>
-    </div>
-</body>
-</html> -->
 
 <!DOCTYPE html>
 <html lang="vi">
@@ -137,7 +109,9 @@
                     <li><span class="label">Học kỳ - năm:</span> HK1 - 2025</li>
                     <li><span class="label">Số sinh viên:</span> 80</li>
                     <li>
-                        <input class="btn" type="button" value="Xem chi tiết">
+                        <a href="class_detail.html">
+                            <button class="btn">Xem chi tiết</button>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -149,7 +123,10 @@
                     <li><span class="label">Học kỳ - năm:</span> HK2 - 2026</li>
                     <li><span class="label">Số sinh viên:</span> 90</li>
                     <li>
-                        <input class="btn" type="button" value="Xem chi tiết">
+                        <a href="class_detail.html">
+                            <button class="btn">Xem chi tiết</button>
+                        </a>
+                        
                     </li>
                 </ul>
             </div>
