--- a/student/dashboardSV.html
+++ b/student/dashboardSV.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thông tin sinh viên</title>
     <style>
         body {
             margin: 0; /*khoảng cách bên ngoài*/
@@ -144,9 +144,14 @@
             </div>
 
             <!-- Nút chức năng -->
+             
             <div class="btn-group">
-                <button class="btn-attendance">Bắt đầu điểm danh</button>
-                <button class="btn-logout">Đăng xuất</button>
+                <a href="D:\pjFaceAI\student\attendance.html" class="btn-group">
+                    <button class="btn-attendance">Bắt đầu điểm danh</button>
+                </a>
+                <a href="D:\pjFaceAI\login\login.html" class="btn-group">
+                    <button class="btn-logout">Đăng xuất</button>
+                </a>
             </div>
         </div>
     </div>
