--- a/lecturer/dashboardGV.html
+++ b/lecturer/dashboardGV.html
@@ -141,10 +141,10 @@
 
             <!-- Nút chức năng -->
             <div class="btn-group">
-                <a href="D:\pjFaceAI\student\attendance.html" class="btn-group">
+                <a href="attendance.html" class="btn-group">
                     <button class="btn-attendance">Bắt đầu điểm danh</button>
                 </a>
-                <a href="D:\pjFaceAI\login\login.html" class="btn-group">
+                <a href="../login/login.html" class="btn-group">
                     <button class="btn-logout">Đăng xuất</button>
                 </a>
             </div>
