--- a/student/dashboardSV.html
+++ b/student/dashboardSV.html
@@ -149,7 +149,7 @@
                 <a href="attendance.html" class="btn-group">
                     <button class="btn-attendance">Bắt đầu điểm danh</button>
                 </a>
-                <a href="../login/login.html" class="btn-group">
+                <a href="loginSV.html" class="btn-group">
                     <button class="btn-logout">Đăng xuất</button>
                 </a>
             </div>
