--- a/student/loginSV.html
+++ b/student/loginSV.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login SV</title>
     <style>
          body {
             font-family: Arial, Helvetica, sans-serif;
@@ -72,9 +72,11 @@
             <h1>HỆ THỐNG ĐIỂM DANH</h1>
             <h2>ĐĂNG NHẬP</h2>
             <div class="tab">
-                <p>Nhập MSSV/MGV: <input type="text"></p>
+                <p>Nhập MGV: <input type="text"></p>
                 <p>Nhập mật khẩu: <input type="text"></p>
-                <input class="btn" type="button" value="Đăng nhập">
+                <a href="dashboardSV.html">
+                    <button class="btn">Đăng nhập</button>
+                </a>
             </div>
         </div>
 
