--- a/lecturer/dashboardGV.html
+++ b/lecturer/dashboardGV.html
@@ -87,6 +87,15 @@
             background-color: #083c6d;
         }
 
+        .btn-classes {
+            background-color: #0b5394;
+            color: white;
+        }
+
+        .btn-classes:hover {
+            background-color: #083c6d;
+        }
+
         .btn-logout {
             background-color: #e06666;
             color: white;
@@ -144,9 +153,13 @@
                 <a href="attendance.html" class="btn-group">
                     <button class="btn-attendance">Bắt đầu điểm danh</button>
                 </a>
+                <a href="classesGV.html">
+                    <button class="btn-classes">Xem danh sách lớp học</button>
+                </a>
                 <a href="loginGV.html" class="btn-group">
                     <button class="btn-logout">Đăng xuất</button>
                 </a>
+                
             </div>
         </div>
     </div>
