--- a/student/dashboardSV.html
+++ b/student/dashboardSV.html
@@ -86,6 +86,15 @@
             background-color: #083c6d;
         }
 
+        .btn-classes {
+            background-color: #0b5394;
+            color: white;
+        }
+
+        .btn-classes:hover {
+            background-color: #083c6d;
+        }
+
         .btn-logout {
             background-color: #e06666;
             color: white;
@@ -148,6 +157,9 @@
             <div class="btn-group">
                 <a href="attendance.html" class="btn-group">
                     <button class="btn-attendance">Bắt đầu điểm danh</button>
+                </a>
+                <a href="classesSV.html" class="btn-group">
+                    <button class="btn-classes">Xem danh sách lớp học</button>
                 </a>
                 <a href="loginSV.html" class="btn-group">
                     <button class="btn-logout">Đăng xuất</button>
